[gd_scene load_steps=7 format=2]

[ext_resource path="res://images/bob-esponja.png" type="Texture" id=1]
[ext_resource path="res://images/patrick-2.png" type="Texture" id=2]
[ext_resource path="res://dialogo.gd" type="Script" id=3]
[ext_resource path="res://Texto.gd" type="Script" id=4]
[ext_resource path="res://images/DownArrow.png" type="Texture" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.345098, 0.552941, 0.662745, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="dialogo" type="Node2D"]
script = ExtResource( 3 )

[node name="Controles" type="HBoxContainer" parent="."]
margin_right = 1280.0
margin_bottom = 40.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="botaoBobEsponja" type="Button" parent="Controles"]
margin_right = 424.0
margin_bottom = 40.0
size_flags_horizontal = 3
text = "Fala do Bob Esponja (curta)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="botaoPatrick" type="Button" parent="Controles"]
margin_left = 428.0
margin_right = 852.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 76.0981, 55.5 )
size_flags_horizontal = 3
text = "Fala do Patrick (longa)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="botaoEsconderMostrarPanel" type="Button" parent="Controles"]
margin_left = 856.0
margin_right = 1280.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 76.0981, 55.5 )
size_flags_horizontal = 3
text = "Esconder/Mostrar panel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContainerDialogo" type="MarginContainer" parent="."]
margin_top = 510.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 2
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="ContainerDialogo"]
margin_left = 5.0
margin_top = 5.0
margin_right = 1275.0
margin_bottom = 205.0
custom_styles/panel = SubResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="ContainerDialogo/PanelContainer"]
margin_right = 1270.0
margin_bottom = 200.0

[node name="ImagemEsquerda" type="TextureRect" parent="ContainerDialogo/PanelContainer/HBoxContainer"]
margin_right = 100.0
margin_bottom = 200.0
texture = ExtResource( 2 )

[node name="MargemTexto" type="MarginContainer" parent="ContainerDialogo/PanelContainer/HBoxContainer"]
margin_left = 104.0
margin_right = 1126.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 30
custom_constants/margin_top = 50
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="ContainerDialogo/PanelContainer/HBoxContainer/MargemTexto"]
margin_left = 30.0
margin_top = 50.0
margin_right = 992.0
margin_bottom = 170.0

[node name="Texto" type="RichTextLabel" parent="ContainerDialogo/PanelContainer/HBoxContainer/MargemTexto/VBoxContainer"]
margin_right = 962.0
margin_bottom = 92.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 8.48
text = "Oi, Patrick"
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaisTexto" type="TextureButton" parent="ContainerDialogo/PanelContainer/HBoxContainer/MargemTexto/VBoxContainer"]
margin_left = 938.0
margin_top = 96.0
margin_right = 962.0
margin_bottom = 120.0
size_flags_horizontal = 8
size_flags_vertical = 8
size_flags_stretch_ratio = 0.14
texture_normal = ExtResource( 5 )
stretch_mode = 3

[node name="ImagemDireita" type="TextureRect" parent="ContainerDialogo/PanelContainer/HBoxContainer"]
margin_left = 1130.0
margin_right = 1270.0
margin_bottom = 200.0
texture = ExtResource( 1 )
